			2x dmg drain xp
		Silver Slingstone
			Sears silver haters
Madman changes
	Salamander Madman
		Early game can slap with tail instead of kicking while straitjacketed
			Will have to use lava to burn down doors
		Mad stuff box has
			+3 mercurial rakuyo spear
			+3 mercurial small flaming trident
			+3 spiked red dsm
			Expert spear skill
			Expert trident skill
			Spearhead Tattoo
Kensei changes
	Salamander Kensei
		Uses tridents as kensei weapon
		Piercing Flame
			Large obsidian 2x fire dmg vorpal trident
		Aura bolts override with fire always
		Efreet on the quest
			
Anachrononaut changes
	Ana quest 
		Now a random power armor on ground zero, good luck.
	Power armor - 
		When on +4 movement points, 25 str, -19 ac, carries its
		own weight and +100 carry cap. 
		When off -6 ac, weighs 500.
		Can fire 1d(2+spe/2) blaster bolts from it.
		Is made of metal so hinders spellcasting.
		Cannot squeeze around boulders or do tight corners while worn.
		Must be charged, wearing it while on and firing lower charge.
	Gnome ana -
		Starts with silver armor/weapons and is made of silver.
		Silver knuckle dusters, allow you to attack barehanded as a
		half dragon as well as doing +5d4 dmg.
		Power armor and some lame armor
		Power armor starts time fluxed, doesn't give extra AC when on
		until repaired with an upgrade kit resized to fit you or
		another monster.
		Starts with a potion vaporizer and some potions.
	New salamander ana race, demolition expert.
		Vibrospear
		Fireproof armor, some dragonhide
		Flamethrower
			Sprays burning oil splashes doing (6+multishot bonus)d6
			Uses a charge system and uses 1 charge per use
	Eth ana - 
		Etherblade
			Polearm type weapon, can be used in melee
			3d6 vs small and large
			Can be charged and fired with F to shoot a 3d6 blast of darkness
		+5 ring of protection
		Can get expert in polearms and darts
	Ent ana -
		Yggdrasil species
			Gigantic
			Inediate
			3 nat ac/dr
		Shock Mortar
			Energy based blaster