@@ -600,7 +600,7 @@ struct Role roles[] = {
 	PM_VICAR_AMALIA, PM_VERGER, PM_INDEX_WOLF,
 	PM_HUMAN_WEREWOLF, PM_MIST_WOLF, S_DOG, S_VORTEX,
 	ART_STAKE_OF_WITHERING,
-	SA_HUMAN|SA_VAMPIRE|SA_ORC|SA_YUKI_ONNA, ROLE_MALE|ROLE_FEMALE |
+	SA_HUMAN|SA_VAMPIRE|SA_ORC|SA_YUKI_ONNA|SA_ENT, ROLE_MALE|ROLE_FEMALE |
 	  ROLE_LAWFUL|ROLE_NEUTRAL|ROLE_CHAOTIC,
 	/* Str Int Wis Dex Con Cha */
 	{   7, 10, 10,  7,  7,  7 },
